# black-sea

./: .gitignore  Cargo.toml  Dockerfile  README.md  anchorings.csv  application.yaml
.github/workflows/: build-publish-update-kustomize.yml  release-client.yml
crates/admin-tool/: Cargo.toml
crates/admin-tool/src/: dashboard.html  editor.html  handlers.rs  index.html  lib.rs  main.rs  router.rs
crates/anchor-editor/: Cargo.toml  README.md
crates/anchor-editor/src/: main.rs
crates/client/: Cargo.toml
crates/client/src/: app.rs  input.rs  main.rs  render.rs
crates/map-loader/: Cargo.toml
crates/map-loader/src/: download.rs  lib.rs  parser.rs  progress.rs  raster.rs
crates/protocol/: Cargo.toml
crates/protocol/src/: coords.rs  lib.rs  tiles.rs  transport.rs
crates/server/: Cargo.toml  build.rs
crates/server/src/: anchorings.rs  handler.rs  main.rs  metrics.rs  spawn.rs
k8s/: admin-ingress.yaml  deployment.yaml  grafana-dashboard.yaml  ingress.yaml  kustomization.yaml  pvc.yaml  service.yaml  servicemonitor.yaml
src/: lib.rs
