[package]
name = "black-sea-admin-tool"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "admin-tool"
path = "src/main.rs"

[dependencies]
black-sea-protocol = { path = "../protocol" }
axum = "0.8"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
csv = "1"
clap = { version = "4", features = ["derive"] }
anyhow = "1"
