[package]
name = "black-sea-protocol"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.50.0", features = ["full"] }
tokio-tungstenite = { version = "0.26", features = ["rustls-tls-native-roots"] }
futures-util = "0.3"
anyhow = "1.0.102"
serde = { version = "1", features = ["derive"] }
serde_repr = "0.1"
bincode = "1"
